---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 04. 11. 2021
  Changes:
    - While playing on your own you'll now get points based on time (not transfered to lobby)
  Bugfixes:
    - Now correctly resets state on reset.
    - Can no longer exit car in round start countdown.
    - GUIs don't get stuck when Tips-And-Tricks is open during portal woosh. (Thanks KRS!)
    - Arena will now stop gracefully if last player leaves the server. (Thanks KRS!)
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 30. 10. 2021
  Features:
    - Improved some graphics.
    - Can now skip splash cutscene.
    - Improved Tips-And-Tricks.
    - Players permissions reduced drastically to minimize bugs and trolss.
    - Tank can now drive through trail walls left by players indefinitely.
    - Bigger explosions and fire on dying that destroys trails in vicinity.
    - GUI now shows applied effects, and sorts according to score.
    - Different effects can now have different probabilities to spawn.
  Changes:
    - Effect colours now depict if it's usually good or bad, not who it will affect.
    - Increase tank effect time from 5 to 10 seconds.
    - Worms now die in explosions and fire.
    - Nuke time decreased. Now drops close to activation position.
    - Biters live slightly longer and see further.
    - Increased coverage of artillery.
  Bugfixes:
    - Fixed case where effects can become corrupted.
    - Nuke effects can now stack.
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 02. 06. 2021
  Bugfixes:
    - Fixed crash in nuke effect.
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 02. 06. 2021
  Features:
    - Added a tips-and-tricks about who effects are applied to.
  Changes: